# double-pendulum-cpp-qt

./: CMakeLists.txt  Readme.md
main/: CMakeLists.txt  PWidget.cpp  PWidget.h  helpers.cpp  helpers.h  main.cpp  mainwidget.cpp  mainwidget.h  pendulum.cpp  pendulum.h
